# MinecraftP2P_Rust

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  server.rs
src/cli/: command.rs
src/server/: ioutils.rs  repo.rs  servercfg.rs
