[package]
name = "mncsrvr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
regex = "1.0.0"
json = "0.12.4"